# label-free-handwritten-text-recognition-learner

./: .gitignore  README.md  configuration.py  create_session.py  default_config.yml  evaluate.py  finetune.py  manager.py  models.py  my_config.yml  prepare_datasets.py  prepare_dictionary.py  prepare_fonts.py  prepare_iam.py  preprocessors.py  pretrain.py  pyproject.toml  requirements.txt  transcribe.py  visualize_fonts.py
hwr_self_train/: __init__.py  augmentation.py  checkpoints.py  config_utils.py  configuration.py  data_generator.py  datasets.py  decoding.py  environment.py  evaluation.py  formatters.py  history_saver.py  image_pipelines.py  image_utils.py  loss_functions.py  metrics.py  models.py  preprocessors.py  recognition.py  session.py  training.py  utils.py  word_samplers.py
hwr_self_train/cmd_api/: __init__.py  data.py  evaluate.py  finetune.py  fonts.py  pretrain.py  session.py  transcribe.py  visualize_fonts.py
hwr_self_train/data_importers/: __init__.py  base.py  iam.py
lafhterlearn/: __init__.py  config_utils.py  configuration.py  data_generator.py  datasets.py  decoding.py  environment.py  image_pipelines.py  image_utils.py  metrics.py  ngram_utils.py  ngrams.py  recognition.py  session.py  tokenizer.py  training.py  utils.py  word_samplers.py
lafhterlearn/cmd_api/: __init__.py  data.py  evaluate.py  extract_fonts.py  finetune.py  learn_ngrams.py  make_session.py  pretrain.py  transcribe.py  visualize_fonts.py  word_distr.py
lafhterlearn/data_importers/: iam.py
tests/: tests.py
